# DDDC-Netbox-plugin

./: .gitignore  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml  scripts.py  troubleshoot.md
.github/workflows/: label.yml
d3c/: __init__.py  device_update.py  filtersets.py  forms.py  models.py  navigation.py  populate.py  string_checker.py  string_helper.py  string_miner.py  string_normalizer.py  tables.py  template_content.py  urls.py  utils.py  views.py
d3c/api/: serializers.py  urls.py
d3c/migrations/: 0001_initial.py  0002_netmask.py  0002_remove_devicefinding_article_number_and_more.py  0003_software_software_unique.py  0004_alter_filehash_options_alter_hash_options_and_more.py
data/: datamodel_sample.sql  ds-dump-communications.json  ds-dump-findings.json  input_sdt.csv  input_sdt_netbox.csv  rawdata.txt  test_easy.csv  test_multi.csv  test_netbox_device.csv  test_netbox_interface.csv  test_netbox_ipam.csv  testimputdata.xlsx
docker-ci/: docker-compose.test.override.yml  docker-compose.test.yml  test.sh
docker-ci/configuration/: configuration.py  plugins.py
docker-ci/env/: netbox.env
docs/: test_guide.md  troubleshoot.md
plugins/: MANIFEST.in  configuration.py  scripts.py  setup.py
plugins/d3c/: __init__.py  device_update.py  filtersets.py  forms.py  graphql.py  models.py  navigation.py  populate.py  tables.py  template_content.py  uri_validate.py  urls.py  utils.py  views.py
scripts/: configuration.py  dddc.sql  initdb.sql  install-plugins.bash  install.bash  pg_hba.conf  start.bash
(+69 files in other folders)
