[project]
name = "d3c"
version = "0.8"
description = "DDDC plugin"
license = "Apache-2.0"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3"
keywords = ["netbox", "incident response"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Plugins",
    "Framework :: Django",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Telecommunications Industry",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Networking",
]
dependencies = [
    "defusedxml",
    "numpy",
    "pandas",
    "openpyxl",
    "pyspellchecker==0.7.2",
    "regex"
]

[project.urls]
homepage = "https://github.com/DINA-community/DDDC-Netbox-plugin/"
repository = "https://github.com/DINA-community/DDDC-Netbox-plugin/"
documentation = "https://github.com/DINA-community/DDDC-Netbox-plugin/"
"Bug Tracker" = "https://github.com/DINA-community/DDDC-Netbox-plugin/issues/"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["d3c"]
